# LogPilot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/configs/: LogPilotConfig.json
assets/shaders/: blur.frag
src/app/: CMakeLists.txt  Main.qml  app.rc  main.cpp
src/libs/: CMakeLists.txt
src/libs/LogWatcher/: CMakeLists.txt
src/libs/LogWatcher/include/LogWatcher/: LogWatcher.h
src/libs/LogWatcher/src/: LogWatcher.cpp
src/libs/WinExport/: WinExport.h
src/modules/: CMakeLists.txt
src/modules/components/: AccentButton.qml  CMakeLists.txt  ClipButton.qml  ColorGradientPanel.qml  DefaultButton.qml  DefaultIconButton.qml  DefaultScrollBar.qml  DefaultText.qml  DefaultTextButton.qml  DefaultTextInput.qml  HueSlider.qml  LevelComboBox.qml  NegativeButton.qml  OpenFileButton.qml  PositiveButton.qml  SearchButton.qml  SettingTabBar.qml  TextInputWithLabel.qml
src/modules/data/: CMakeLists.txt  Config.qml  DataServiceHub.qml  FileIO.cpp  FileIO.h  FpsItem.cpp  FpsItem.h  LogConfigModel.cpp  LogConfigModel.h  LogData.cpp  LogData.h  LogModelSortFilterProxyModel.h  LogMsg.h  LogSession.qml  LogWatcherService.cpp  LogWatcherService.h
src/modules/views/: AboutView.qml  BottomBar.qml  CMakeLists.txt  ColorSettingView.qml  FontSettingView.qml  LogSessionView.qml  LogsView.qml  RegexSettingView.qml  SettingView.qml  TitleBar.qml
